# gwt

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: cli.rs  logger.rs  main.rs
src/commands/: add.rs  init.rs  mod.rs  purge.rs
tests/: add_command.rs  init_command.rs  purge_command.rs
