[package]
name = "gwt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["cargo", "derive"] }
git2 = { version = "0.20.4", features = ["https", "ssh"] }
log = "0.4.29"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
rstest = "0.26.1"
