[package]
name = "gwt-helper"
version = "0.1.1"
edition = "2024"
description = "Git worktree helper"
license = "MIT"

[[bin]]
name = "gwt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["cargo", "derive"] }
git2 = { version = "0.20.4", features = ["https", "ssh"] }
log = "0.4.29"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
rstest = "0.26.1"
serial_test = "3.4.0"
tempfile = "3.27.0"
